--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "path": "^0.12.7",
     "pg": "^7.7.1"
   },
   "devDependencies": {},
